Added working directory and environment